added delete document api
